2021-02-13  Sam Varshavchik  <mrsam@courier-mta.com>

	* courier-unicode-version.m4: split version checking macro into its
	own m4 file.

	* unicode::bidi_calc - an empty string with an explicit embedding
	level should return the requested embedding level.

2.2
2020-11-05  Sam Varshavchik  <mrsam@courier-mta.com>

	* unicode::iconvert::convert, fix uninitialized variable.


2020-11-04  Sam Varshavchik  <mrsam@courier-mta.com>

	* spec file: add BuildRequires: %{__make} (will be required in F34).

2020-07-11  Sam Varshavchik  <mrsam@courier-mta.com>

	* Implement bidirectional algorithm, canonical or equivalent character
	mappings.

2020-07-04  Sam Varshavchik  <mrsam@courier-mta.com>

	* Unicode 13 update. Adds lookup of EastAsianWidth property, emoji
	property lookup, adds an alternative sequence-based grapheme API
	that handles multi-character emoji rules.

	* Add bidi property lookups.

2.1.2

2020-11-25  Sam Varshavchik  <mrsam@courier-mta.com>

	* Makefile.am: Regenerate docs due to broken man page links.

2.1.1

2020-11-24  Sam Varshavchik  <mrsam@courier-mta.com>

	* unicodebuf.c (unicode_buf_remove): Bug fix.

2.1

2020-04-21  Sam Varshavchik  <mrsam@courier-mta.com>

	* Add AC_PROG_CC_C99 to configure

2018-07-13  Sam Varshavchik  <mrsam@courier-mta.com>

	* unicode.c: Fix error and validation of valid modified-utf7
	encoding.

2018-07-11  Sam Varshavchik  <mrsam@courier-mta.com>

	* unicode.c: Implement unicode_x_smap_modutf8 pseudo-encoding.

2018-04-27  Sam Varshavchik  <mrsam@courier-mta.com>

	* gcc 8 update, fix assertions. libtool and toolchain updates.

2.0

2017-03-06  Sam Varshavchik  <mrsam@courier-mta.com>

	* Migrate to C++11: remove unicode_char, use char32_t. Replace
	std::vector<unicode_char> with std::u32string.

1.5

2016-02-19  Sam Varshavchik  <mrsam@courier-mta.com>

	* configure.ac: Better test for available of nl_langinfo_l().

1.3

2015-06-28  Sam Varshavchik  <mrsam@courier-mta.com>

	* all: rebased against Unicode 8
